@@ -96,6 +96,7 @@
             Pixl.js: Fix 30s pause when closing sockets on WIZnet W5100 (fix #1306)
             Remove HASH/hashlib from all builds as it was confusingly in some and not others. Now use 'crypto'
             require('crypto').SHA1 is now JS in Espruino Original to cut down on the flash required
+            Added 'heatshrink' library to expose built-in heatshrink compression to users
 
      1v99 : Increase jslMatch error buffer size to handle "UNFINISHED TEMPLATE LITERAL" string (#1426)
             nRF5x: Make FlashWrite cope with flash writes > 4k
